--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,15 @@ before_install:
 
 script:
   - docker run -e CI=true tstocks/docker-react npm run test
-  
+
+deploy:
+  provider: elasticbeanstalk
+  region: us-east-1
+  app: docker-react
+  env: "Dockerreact-env"
+  bucket_name: "elasticbeanstalk-us-east-1-683966242138"
+  bucket_path: "docker-react"
+  on:
+    branch: master
+  access_key_id: "$AWS_ACCESS_KEY"
+  secret_access_key: "$AWS_SECRET_KEY"
